# FirstWidgetsApplication

./: .gitignore  CMakeLists.txt  FirstWidgetsApplication.rc  README.md  main.cpp  second.cpp  second.hpp  second.rc
